--- a/GD project/maybe.html
+++ b/GD project/maybe.html
@@ -41,7 +41,7 @@
     <header>
     <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" id="mySidebar">
         <!-- Botón de regresar a la página anterior -->
-        <a href="/index.html/index.html" class="back-button">← Volver</a>
+        <a href="/indexhtml/index.html" class="back-button">← Volver</a>
     </nav>
     </header>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BEsCY04JaUg?si=XHZBrTjjI1yPo2-q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
