--- a/contaminacion/contaminacion.html
+++ b/contaminacion/contaminacion.html
@@ -15,7 +15,7 @@
                 <li><a href="#tipos">Tipos de Contaminación</a></li>
                 <li><a href="#consecuencias">Consecuencias</a></li>
                 <li><a href="#soluciones">Soluciones</a></li>
-                <li><a href="/index.html/index.html" class="back-button">← Volver</a></li>
+                <li><a href="/indexhtml/index.html" class="back-button">← Volver</a></li>
             </ul>
         </nav>
     </header>
