--- a/primer avance/1.html
+++ b/primer avance/1.html
@@ -12,7 +12,7 @@
       <p>
         "1984" es una novela distópica escrita por George Orwell que presenta una visión sombría y opresiva de un futuro totalitario. La historia está ambientada en el año 1984 y sigue la vida de Winston Smith, un empleado del Partido Exterior que trabaja en el Ministerio de la Verdad, donde su trabajo consiste en reescribir la historia para alinearla con la propaganda del Partido.
     <ul>
-        <li><a href="/index.html/index.html" class="back-button">← Volver</a></li>
+        <li><a href="/indexhtml/index.html" class="back-button">← Volver</a></li>
     </ul>
       </p>
     </header>
