--- a/aternosweb/aternos.html
+++ b/aternosweb/aternos.html
@@ -17,7 +17,7 @@
                 <li><a href="#features">Características</a></li>
                 <li><a href="#about">Sobre Nosotros</a></li>
                 <li><a href="#contact">Contacto</a></li>
-                <li><a href="/index.html/index.html">← Volver</a></li>
+                <li><a href="/indexhtml/index.html">← Volver</a></li>
             </ul>
         </nav>
     </header>
