--- a/secundario/brawl stars wiki.html
+++ b/secundario/brawl stars wiki.html
@@ -18,7 +18,7 @@
                     <li><a href="#EL PRIMO LOCAZO">EL PRIMO LOKAZO</a></li>
                     <li><a href="#updates">Actualizaciones</a></li>
                     <li><a href="#strategies">Tier list</a></li>
-                    <li><a href="/index.html/index.html" class="back-button">← Volver</a></li>
+                    <li><a href="/indexhtml/index.html" class="back-button">← Volver</a></li>
                 </ul>
             </nav>
         </div>
